# technical_test_sinerji

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
api/init/: schema.sql
api/src/configs/: jwt_configs.py
api/src/controllers/: login_creator.py  login_creator_test.py  user_register.py  user_register_test.py
api/src/controllers/interfaces/: login_creator.py  user_register.py
api/src/drivers/: jwt_handler.py  jwt_handler_test.py  password_handler.py  password_handler_test.py
api/src/errors/: error_handler.py
api/src/main/composer/: login_creator_composer.py  user_register_composer.py
api/src/main/middlewares/: auth_jwt.py
api/src/main/routes/: schemas.py  users_routes.py
api/src/main/server/: server.py
api/src/models/interface/: user_repository.py
api/src/models/repositories/: user_repository.py  user_repository_test.py
api/src/models/settings/: db_connection_handler.py
api/src/views/: login_creator_view.py  login_creator_view_test.py  user_register_view.py  user_register_view_test.py
api/src/views/http_types/: http_request.py
app/: .env.example  README.md  docker-compose.yml
app/app/: index.html  package.json
app/src/: App.jsx  index.css
app/src/components/: PrivateRoute.jsx
app/src/contexts/: AuthContext.jsx
app/src/pages/: Auth.module.css  Dashboard.jsx  Dashboard.module.css  Login.jsx  Register.jsx
app/src/services/: api.js
